syntax = "proto3";

option java_multiple_files = true;
package vn.zalopay.gitlab.phuctt4.rock.paper.scissors.grpc;

message SessionRequest {

}

message SessionResponse {
    int64 id = 1;
}

service SessionService {
    rpc createSession(SessionRequest) returns (SessionResponse);
}